--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
+    <!--validation数据校验-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
