--- a/big-event/src/main/resources/application.yml
+++ b/big-event/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
     url: jdbc:mysql://localhost:3306/big_event
     username: root
     password: root
+
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true  # 开启数据库表中的字段下划线驼峰命名法
