--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -64,6 +64,12 @@
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
 
+    <!--开启分页查询-->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-starter</artifactId>
+      <version>1.4.6</version>
+    </dependency>
   </dependencies>
 
 </project>
