修改mybatis配置映射

--- a/big-event/src/main/resources/application.yml
+++ b/big-event/src/main/resources/application.yml
@@ -9,4 +9,5 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true  # 开启数据库表中的字段下划线驼峰命名法
+  mapper-locations: classpath*:/mapper/*.xml #配置xml映射
 
