通过redis进行登录优化

--- a/big-event/src/main/resources/application.yml
+++ b/big-event/src/main/resources/application.yml
@@ -4,10 +4,16 @@ spring:
     url: jdbc:mysql://localhost:3306/big_event
     username: root
     password: root
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 
 mybatis:
   configuration:
     map-underscore-to-camel-case: true  # 开启数据库表中的字段下划线驼峰命名法
   mapper-locations: classpath*:/mapper/*.xml #配置xml映射
+
+
 
