--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -71,6 +71,11 @@
       <version>1.4.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+
     <!--阿里云OSS-->
     <dependency>
       <groupId>com.aliyun.oss</groupId>
