--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -100,6 +100,20 @@
       <version>2.3.3</version>
     </dependency>
 
+
   </dependencies>
+
+
+
+  <build>
+    <plugins>
+      <!--打包插件-->
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>3.1.5</version>  <!-- 和SpringBoot版本一致 -->
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
